# resources-example

./: MANIFEST.in  README.rst  pyproject.toml  setup.cfg
myapp/: __init__.py  example1.py  example2.py  example3.py  example4.py  example5.py
myapp/data_subpackage/: __init__.py
