[metadata]
name = resources-example
author = Wim Glenn
author_email = hey@wimglenn.com
version = attr: myapp.__version__
description = An example project demonstrating various ways to access data files in Python package
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = packaging, resources
license = MIT
home_page = https://github.com/wimglenn/resources-example
project_urls =
    Issue Tracker = https://github.com/wimglenn/resources-example/issues
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving :: Packaging
    Topic :: System :: Systems Administration
    Topic :: Utilities

[options]
packages = find:
include_package_data = true
install_requires =
    setuptools
    importlib_resources; python_version < "3.7"


[options.entry_points]
console_scripts =
    resources-example = myapp:main

[bdist_wheel]
universal = 1
